# ProjectNavour

./: .gitignore  gitPull.sh
Navour/: CMakeLists.txt
Navour/NavourMain/: CMakeLists.txt
Navour/NavourMain/src/: NavourMain.cpp
Navour/WV_RP2040_LCD/: CMakeLists.txt
Navour/WV_RP2040_LCD/config/: lv_conf.h
Navour/WV_RP2040_LCD/hdr/: WV_RP2040_LCD.h
Navour/WV_RP2040_LCD/src/: WV_RP2040_LCD.cpp
Navour/WV_RP2040_Utility/: CMakeLists.txt
Navour/WV_RP2040_Utility/hdr/: ADC_Util.h  GPIO_Util.h  List_Util.h
Navour/WV_RP2040_Utility/src/: ADC_Util.cpp  GPIO_Util.cpp
